[package]
name = "pros-rs"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex_a9_types = {path="./cortex_a9_types"}

[dev-dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.51.0"
cbindgen = "0.8.1"

[workspace]
members = [
    "cortex_a9_types"
]

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 's'
lto = true
